[package]
name = "url"
version = "0.1.0"
authors = ["syarig <syarig110@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1.0"
failure = "0.1.8"
structopt = "0.2"
atty = "0.2.14"
log = "0.4.11"
pretty_env_logger = "0.4.0"